@@ -1,0 +1,1 @@
+1.11111111111111E+74
